--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Kanit', sans-serif;
 }
