--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,82 @@
 .wrapper {
-  background-image: url('./assets/bkg.jpg');
+  min-height: 100%;
+  height: auto;
   width: 100%;
+  background: url('./assets/bkg.jpg');
+}
+
+.mainSection {
+  min-height: 500px;
   height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 10%;
+  margin-bottom: 100px;
+}
+
+.mainSection .content {
+  margin-top: 123px;
+  width: 60%;
+  padding-right: 8%;
+}
+
+.mainSection .content p {
+  margin-top: 6px;
+  color: #fff;
+  opacity: .6;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2.2px;
+  font-size: 12px;
+}
+
+.mainSection .content .mainImage {
+  margin-top: 26px;
+}
+
+.mainSection .content a .orderButton {
+  position: relative;
+  margin-top: 11px;
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 50px;
+  background: hsla(0, 0%, 100%, .1);
+  cursor: pointer;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1.1px;
+  text-align: left;
+  padding-left: 30px;
+  transition: all .25s ease-out;
+}
+
+.mainSection .content a .orderButton:hover {
+  background: #fff;
+  color: #3b121c;
+}
+
+.mainSection .content a .orderButton:after {
+  position: absolute;
+  content: "";
+  top: 19px;
+  right: 25px;
+  width: 12px;
+  height: 9px;
+  display: block;
+  background: url(./assets/arrow-yellow.svg) 0 0 no-repeat;
+  background-size: 100% 100%;
+}
+
+.mainSection .content a .orderButton:hover:after {
+  background: url(./assets/arrow-red.svg) 0 0 no-repeat;
+}
+
+
+/* .picture */
+
+.mainSection .picture {
+  margin-top: 125px;
+  width: 40%;
 }
