--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   width: 100%;
   max-height: 100px;
   height: 100%;
@@ -7,6 +8,13 @@
   padding: 60px 10% 0;
 }
 
+.header .navLogo {
+  position: absolute;
+  width: 82px;
+  top: 24px;
+  left: 46%;
+  margin-left: 17px;
+}
 
 
 
