--- a/src/components/MainSection/MainPage/MainPage.module.css
+++ b/src/components/MainSection/MainPage/MainPage.module.css
@@ -2,16 +2,18 @@
   display: flex;
   align-items: center;
   padding: 0 10%;
+  padding-top: 10%;
 }
 
 .mainPage .content {
-  margin-top: 123px;
+  margin-top: 27px;
   width: 60%;
+  height: 100%;
   padding-right: 8%;
 }
 
 .mainPage .content p {
-  margin-top: 6px;
+  height: 20px;
   color: #fff;
   opacity: .6;
   text-transform: uppercase;
@@ -21,7 +23,12 @@
 }
 
 .mainPage .content .mainImage {
-  margin-top: 26px;
+  margin-top: 23px;
+  height: auto;
+}
+
+.mainPage .content .mainImage img {
+  height: auto;
 }
 
 .mainPage .content a .orderButton {
@@ -67,6 +74,11 @@
 /* .picture */
 
 .mainPage .picture {
-  margin-top: 125px;
+  margin-top: -36px;
   width: 40%;
+}
+
+.mainPage .picture img {
+  height: 460px;
+  width: 460px;
 }
