--- a/src/components/MainSection/TourPage/TourPage.module.css
+++ b/src/components/MainSection/TourPage/TourPage.module.css
@@ -1,4 +1,5 @@
 .tourPage {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 0 10%;
@@ -6,7 +7,8 @@
 
 .tourPage .listPlate {
   border: 1px solid #fff;
-  margin-top: 90px;
+  z-index: 1;
+  margin-top: -39px;
   margin-bottom: -58px;
   background-color: rgb(59, 18, 28);
   color: rgb(229, 192, 16);
@@ -19,4 +21,14 @@
   max-height: 560px;
   height: 100%;
   overflow-y: scroll;
+}
+
+.tourPage .rigthStatue {
+  position: absolute;
+  z-index: 0;
+  top: 50px;
+  right: -150px;
+  height: 93%;
+  width: 378px;
+  overflow: hidden;
 }
