--- a/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
+++ b/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
@@ -2,7 +2,8 @@
 
 .footerFollow {
   position: absolute;
-  width: 444px;
+  max-width: 444px;
+  width: 100%;
   height: 203px;
   bottom: 0;
   left: 52%;
@@ -22,3 +23,39 @@
 }
 
 
+@media (max-width: 1280px) {
+  .footerFollow {
+    width: 265px;
+    height: 243px;
+    left: 66%;
+    padding: 45px 65px 50px;
+  }
+
+  .footerFollow div {
+    width: 150px;
+    height: 100px;
+    margin-top: -75px;
+  }
+  
+  .footerFollow div ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .footerFollow div ul li {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    margin-right: 22px !important;
+  }
+}
+
+@media (max-width: 1050px) {
+  .footerFollow {
+    left: 60%;
+  }
+}
