--- a/src/components/MainSection/TourPage/TourPage.module.css
+++ b/src/components/MainSection/TourPage/TourPage.module.css
@@ -2,14 +2,13 @@
   position: relative;
   display: flex;
   align-items: center;
-  padding: 0 10%;
+  padding: 90px 10% 70px;
+  overflow: hidden;
 }
 
 .tourPage .listPlate {
   border: 1px solid #fff;
   z-index: 1;
-  margin-top: -39px;
-  margin-bottom: -58px;
   background-color: rgb(59, 18, 28);
   color: rgb(229, 192, 16);
   fill: rgb(229, 192, 16);
@@ -18,8 +17,6 @@
   font-weight: 400;
   text-shadow: none;
   text-transform: none;
-  max-height: 560px;
-  height: 100%;
   overflow-y: scroll;
 }
 
@@ -31,4 +28,11 @@
   height: 93%;
   width: 378px;
   overflow: hidden;
+}
+
+@media (max-width: 1280px) {
+  .tourPage {
+    padding-left: 7%;
+    padding-right: 7%;
+  }
 }
