--- a/src/components/MainSection/VideoPage/VideoPage.module.css
+++ b/src/components/MainSection/VideoPage/VideoPage.module.css
@@ -3,9 +3,11 @@
   display: flex;
   align-items: center;
   padding: 0 10%;
+  overflow: hidden;
 }
 
 .videoPage .videoPlate {
+  z-index: 1;
   margin: 0 auto;
   width: 94.22222vh;
   min-width: 400px;
