--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,9 +2,19 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
 }
 
-.footer > div {
-  width: 50%;
-  height: 425px;
+@media (min-width: 981px) {
+  .footer > div {
+    width: 50%;
+    height: 425px;
+  }
+}
+
+@media (max-width: 980px) {
+  .footer {
+    display: block;
+    height: auto;
+  }
 }
