--- a/src/components/Footer/FooterForm/FooterForm.module.css
+++ b/src/components/Footer/FooterForm/FooterForm.module.css
@@ -129,5 +129,17 @@
   font-size: 20px;
 }
 
+@media (max-width: 980px) {
+  .footerForm {
+    margin-top: 18.9%;
+    width: 100%;
+    padding: 0 16% 50px;
+  }
 
+  .footerForm .formWrap {
+    max-width: 480px;
+    margin: 0 auto;
+    transform: none
+  }
+}
 
