--- a/src/components/Footer/FooterNavMenu/FooterNavMenu.module.css
+++ b/src/components/Footer/FooterNavMenu/FooterNavMenu.module.css
@@ -36,3 +36,21 @@
   opacity: .5;
 }
 
+@media (max-width: 980px) {
+  .footerNavMenu {
+    width: 100%;
+    padding: 55px 8% 103px 16%;
+  }
+
+  .footerNavMenu ul.footerMenu {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    height: auto;
+  }
+
+  .footerNavMenu ul.footerMenu li {
+    margin: 7px 20px 7px 0;
+    width: auto;
+  }
+}
