--- a/src/components/MainSection/StorePage/StorePage.module.css
+++ b/src/components/MainSection/StorePage/StorePage.module.css
@@ -88,3 +88,32 @@
     padding-top: 7.6%;
   }
 }
+
+@media (max-width: 980px) {
+  .storePage {
+    justify-content: center;
+    flex-wrap: wrap;
+    height: auto;
+    padding-top: 90px;
+    padding-bottom: 70px;
+}
+
+  .storePage .content {
+    padding-right: 0;
+    width: 100%;
+    max-width: 550px;
+  }
+
+  .storePage .content .storeImage {
+    margin-top: 0;
+  }
+
+  .storePage .storeOptions .links {
+    width: 100%;
+    margin-top: 45px;
+  }
+
+  .storePage .storeOptions .links ul {
+    align-items: center;
+  }
+}
