--- a/src/components/MainSection/MainPage/MainPage.module.css
+++ b/src/components/MainSection/MainPage/MainPage.module.css
@@ -135,3 +135,11 @@
     margin: 0 auto;
   }
 }
+
+@media (max-width: 768px) {
+  .mainPage {
+    padding-top: 110px;
+    padding-left: 8%;
+    padding-right: 8%;
+  }
+}
