--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -16,11 +16,131 @@
   margin-left: 17px;
 }
 
+.header .burgerBtn {
+  display: none;
+}
+
 @media (max-width: 1280px) {
   .header {
     padding: 60px 7% 0;  
   }
 }
+
+@media (max-width: 768px) {
+  .header {
+    padding: 40px 8% 0;
+  }
+
+  .header.opened {
+    height: 101vh;
+    padding-left: 14%;
+  }
+
+  .header .navLogo {
+    display: none;
+  }
+
+  .header .navLogo.burgered {
+    display: block;
+    position: initial;
+    width: 147px;
+    height: auto;
+    margin-left: 12px;
+    margin-bottom: 12px;
+  }
+
+  .header .burgerBtn {
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+  }
+
+  .header .burgerBtn span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: #fff;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+  }
+
+  
+  .header .burgerBtn span:nth-child(1) {
+    top: 4px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .header .burgerBtn span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .header .burgerBtn span:nth-child(3) {
+    top: 16px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .header .burgerBtn.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 3px;
+    left: 3px;
+  }
+  
+  .header .burgerBtn.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+  }
+  
+  .header .burgerBtn.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 17px;
+    left: 3px;
+  }  
+}
+
+
+
+
+
+
+
+
+
 
 
 
