--- a/src/components/Header/Socials/Socials.module.css
+++ b/src/components/Header/Socials/Socials.module.css
@@ -53,7 +53,7 @@
   height: 24px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 980px) {
+@media screen and (min-width: 769px) and (max-width: 980px) {
   .socials ul {
     max-width: 250px;
     width: 100%;
@@ -64,4 +64,10 @@
     height: 20px;
     width: auto;
   } 
+}
+
+@media (max-width: 768px) {
+  .socials.closed {
+    display: none;
+  }
 }
