--- a/src/components/Footer/FooterForm/FooterForm.module.css
+++ b/src/components/Footer/FooterForm/FooterForm.module.css
@@ -148,3 +148,25 @@
     display: none;
   }
 }
+
+@media (max-width: 480px) {
+  .footerForm {
+    margin-top: 52%;
+  }
+
+  .footerForm.blacked {
+    background: black;
+  }
+}
+
+@media (max-width: 400px) {
+  .footerForm {
+    margin-top: 60%;
+  }
+}
+
+@media (max-width: 350px) {
+  .footerForm {
+    margin-top: 70%;
+  }
+}
