--- a/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
+++ b/src/components/Footer/FooterNavMenu/FooterFollow/FooterFollow.module.css
@@ -60,7 +60,7 @@
   }
 }
 
-@media (max-width: 980px) {
+@media (min-width: 481px) and (max-width: 980px) {
   .footerFollow {
     max-height: 185px;
     height: 100%;
@@ -81,3 +81,19 @@
     justify-content: space-between;
   }
 }
+
+@media (max-width: 480px) {
+  .footerFollow {
+    max-height: 248px;
+    height: 100%;
+    top: 82%;
+    left: 16%;
+    max-width: 1000px;
+    padding: 56px 16%;
+  }
+  
+  .footerFollow div {
+    margin-top: -73px;
+  }
+}
+
