--- a/src/components/Header/Socials/Socials.module.css
+++ b/src/components/Header/Socials/Socials.module.css
@@ -71,3 +71,27 @@
     display: none;
   }
 }
+
+@media (max-width: 480px) {
+  .socials {
+    width: 150px;
+    height: 100px;
+    margin-top: -4px;
+  }
+  
+  .socials ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .socials ul li {
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    margin-right: 22px !important;
+  }
+}
