--- a/src/components/MainSection/VideoPage/VideoPage.module.css
+++ b/src/components/MainSection/VideoPage/VideoPage.module.css
@@ -36,8 +36,8 @@
 
 .videoPage .videoPlate .legend a .moreButton {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 170px;
+  height: 50px;
   border: none;
   border-radius: 50px;
   background: hsla(0, 0%, 100%, .1);
@@ -125,5 +125,43 @@
   .videoPage .videoPlate .player {
     width: 86vw;
     height: 48.375vw;
+  }
+}
+
+@media (max-width: 768px) {
+  .videoPage {
+    padding: 80px 8%;
+  }
+
+  .videoPage .videoPlate .player {
+    margin-top: 0;
+    width: 84vw;
+    height: 47.25vw;
+    min-height: auto;
+  }
+  
+  .videoPage .videoPlate .legend {
+    width: 84vw;
+  }
+}
+
+@media (max-width: 660px) {
+  .videoPage .rigthStatue {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .videoPage .videoPlate .legend {
+    height: 100px;
+    margin-top: 15px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 428px) {
+  .videoPage .videoPlate .legend a {
+    margin-top: 25px;
   }
 }
